# annotes

./: .gitignore  README.md  RELEASE_GUIDE.md  RELEASE_NOTES.md  USER_MANUAL.md  annotes.spec  test_multi_triggers.py  test_release.py
.github/workflows/: build.yml  ci.yml  release.yml
docs/: index.html
landing_site/: index.html
notes/: Notes -Ember - Anthropology (pg.689).md  Notes -UPSC Syllabus.md  ref_langingpage.js
scripts/legacy/: A2O_v5.1.4.py
src/: annotes.py  annotes.spec  config.default.yaml  config.yaml  connectors.py  formatter.py  mdutils.py  pdfutils.py  pyproject.toml  scheduler.py  settings.py  settings_docs.yaml  start_watcher.py  tray_app.py  utils.py  watcher.py  web_ui.py
src/templates/: help.html  landing.html  settings.html
test/: test_multi_triggers.py  test_release.py  verify_refactor.py
